--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ repositories {
 }
 
 dependencies {
+    implementation files('libs/java-json.jar')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
